fix: code block row alignment

--- a/src/css/_partial/_post/_chroma_highlight.scss
+++ b/src/css/_partial/_post/_chroma_highlight.scss
@@ -35,9 +35,9 @@
 
 /* LineNumbersTable */
 
-.chroma .lnt {
+.chroma .lntd:first-of-type {
     margin-right: 0.4em;
-    padding: 0 0.4em 0 0.4em;
+    padding: 0 0.8em 0 0.4em;
 }
 
 /* LineNumbers */
